@@ -135,7 +135,6 @@ class CircusParser(object):
                           ['clustering', 'compress', 'bool', 'True'],
                           ['clustering', 'noise_thr', 'float', '0.5'],
                           ['clustering', 'cc_merge', 'float', '0.95'],
-                          ['clustering', 'cc_mixtures', 'float', '0.95'],
                           ['clustering', 'n_abs_min', 'int', '20'],
                           ['clustering', 'sensitivity', 'float', '3'],
                           ['clustering', 'extraction', 'string', 'median-raw'],
